--- a/client/components/Profile/profStyles.css
+++ b/client/components/Profile/profStyles.css
@@ -10,3 +10,16 @@
 	display: inline-block;
 	margin-right: 25px;
 }
+
+.panel {
+	box-shadow: none;
+	background-image: none;
+	border-color: #006BA6;
+	color: #006BA6;
+}
+
+.panel-default>.panel-heading {
+	background-color: #006BA6;
+    color: white;
+    background-image: none;
+}
